added check to make filter in watchlist invisible